Camlp4 Version 3.04+5
---------------------

- [03 Feb 02] Added function Stdpp.line_of_loc returning the line and
  columns positions from a character location and a file.
- [01 Feb 02] Fixed bug in token.ml: the location function provided by
  lexer_func_of_parser, lexer_func_of_ocamllex and make_stream_and_location
  could raise Invalid_argument "Array.make" for big files if the number
  of read tokens overflows the maximum arrays size (Sys.max_array_length).
  The bug is not really fixed: in case of this overflow, the returned
  location is (0, 0) (but the program does not fail).
- [28 Jan 02] Fixed bug in pa_o when parsing class_types. A horrible hack
  had to be programmed to be able to treat them correctly.
- [28 Jan 02] Fixed bug in OCaml toplevel when loading camlp4: the directives
  were not applied in the good order.
- [26 Jan 02] The printer pr_extend.cmo try now also to rebuild GEXTEND
  statements (before it tried only the EXTEND).
- [23 Jan 02] The empty functional stream "fstream [: :]" is now of type
  'a Fstream.t thanks to the new implementation of lazies allowing to
  create polymorphic lazy values.
- [11 Jan 02] Added a test in grammars using Plexer that a keyword is not
  used also as parameter of a LIDENT or a UIDENT.
- [04 Jan 02] Fixed bug in pa_sml (SML syntax): the function definitions
  with several currified parameters did not work. It works now, but the
  previous code was supposed to treat let ("fun" in SML syntax) definitions
  of infix operators, what does not work any more now.
- [04 Jan 02] Alain Frisch's contribution:
  Added pa_ocamllex.cma, syntax for ocamllex files. The command:
      camlp4 pa_ocamllex.cmo pr_o.cmo -ocamllex -impl foo.mll > foo.ml
  does the same thing as:
      ocamllex foo.mll
  Allow to compile directly mll files. Without option -ocamllex, allow
  to insert lex rules in a ml file.
- [29 Dec 01] Added variable "inter_phrases" in Pcaml, of type ref (option